Fix overlap

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -40,7 +40,7 @@ $placeholder-color: rgba(73, 80, 87, 0.6);
     bottom: 13%;
     width: 60%;
     left:20%;
-    height: 75%;
+    height: 73%;
     background-color: #FFFF;
     display: grid;
     grid-template-columns: 1fr 1.5fr
